2010-6-28 Yu-Sung Su     <ys463@columbia.edu>  
    * R/extractDIC: add s3 methods for extractDIC and extractAIC for the mer class
    * Rd/extractDIC

2010-1-21 Yu-Sung Su     <ys463@columbia.edu>  
    * R/standardize: add polr method
    * Rd/standardize: change the example code to make M1 and M2 equivalent. 

2010-1-15 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-03
    * R/balanceplot: fix a bug in balance(), take out the intercept

2010-1-11 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-02
    * R/bayesglm: new bayesglm.fit (written by Daniel Lee)


2010-1-8 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-01.
    * R/bayesglm: a bug in x.matrix augmentation


2009-12-30 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-13.
    * R/bayesglm: smarter use of x matrix to save memory usage


2009-12-12 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-12.
    * R/simmer: use of sparse matrix in sim.mer

2009-12-08 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-11; add abind pacakge dependencyR 
    * R/simmer: new sim functions for "mer" class

2009-11-22 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-10.
    * NAMESPACE: export logit

2009-4-29 Yu-Sung Su     <ys463@columbia.edu>  
    * R/display: fix format inconsistency in sprintf (fround)

2009-4-13 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-9.
    * R/macthing: fix a bug in matching replace=TRUE


2009-3-31 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-8.
    * R/display: add option detail


2009-3-1 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-7.
    * R/display: fix a bug in display.mer


2009-2-26 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-6.